<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/menu_icon"
        android:title="@string/menu" />

    <item
        android:id="@+id/profile"

        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/contact"

        android:icon="@drawable/ic_baseline_contact_page_24"
        android:title="@string/contacts" />

    <item
        android:id="@+id/basket"

        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/basket" />

    <item
        android:id="@+id/about"
        
        android:icon="@drawable/about_icon"
        android:title="@string/about" />


</menu>